# kindavm

./: .pre-commit-config.yaml  Makefile  README.md  go.mod  hid_report_desc.md  init_hdmi.sh  init_hid.sh  install.sh  kindavm-init-hdmi.service  kindavm-init-hid.service  kindavm-init.service  kindavm.service  kindavmd.service  pyproject.toml  release.sh  uninstall.sh
.github/workflows/: build.yml
cmd/kindavmd/: README.md  main.go
configs/: config.txt  edid.hex
internal/events/: events.go
internal/hid/: consumer.go  hid.go  keyboard.go  keyboard_test.go  mouse.go  mouse_test.go
internal/video/: h264.go  mjpeg.go
internal/web/: server.go
internal/web/static/: app.js  h264-player.js  index.html  style.css
kindavm/: cli.py  consumer.py  hid.py  keyboard.py  mouse.py  system.py
tools/: edidmod  ustreamer
