[project]
name = "kindavm"
version = "0.0.1"
description = "USB HID keyboard and mouse emulation for KVM usage"
authors = [{ name = "Andrii Yurchuk", email = "ay@mntw.re" }]
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "mypy>=1.19.0",
]

[project.scripts]
kinda = "kindavm.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_column_numbers = true
